# kendall

./: .gitignore  CMakeLists.txt  README.md  kendall.cc  main.cc
googletest-download/: CMakeLists.txt
googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
include/: kendall.h
test/: kendallTest.cc
